Use correct ScrollbarTheme to paintScrollCorner

This issue is caused by we did not know ScrollbarTheme in
FramePainter::paintScrollCorner then use ScrollbarTheme::theme to
paint.

In this patch, we get ScrollbarTheme from the related scrollbar and
use it to paintScrollCorner.

BUG=676678
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2741223002
Cr-Commit-Position: refs/heads/master@{#456569}

Former-commit-id: fe8765486d0c6b4e2e470bf284697fcb9aae5ea4